# ash

./: CMakeLists.txt  COPYING  Makefile  README  ash.c  io.c
ash/: CMakeLists.txt  Makefile  alias.c  ash.c  builtin.c  cd.c  command.c  defined.c  echo.c  env.c  exec.c  exit.c  export.c  help.c  history.c  io.c  iter.c  lang.c  list.c  mem.c  ops.c  rand.c  read.c  script.c  session.c  sleep.c  source.c  typeof.c  unit.c  unset.c  util.c  var.c
ash/core/: ash.c  command.c  env.c  exec.c  module.c  path.c  session.c  signal.c
ash/ffi/: ffi.c
ash/lang/: ast.c  lang.c  lex.c  main.c  parser.c  runtime.c
ash/term/: term.c
ash/type/: array.c  bool.c  func.c  int.c  map.c  obj.c  range.c  str.c  tuple.c
ash/util/: hash.c  map.c  queue.c  rc.c  strbuf.c  vec.c
include/: ash.h  builtin.h  env.h  exit.h  io.h  ops.h  read.h  script.h  var.h
include/ash/: alias.h  ash.h  bool.h  builtin.h  cd.h  command.h  defined.h  echo.h  env.h  exec.h  exit.h  export.h  func.h  help.h  history.h  int.h  io.h  iter.h  lang.h  list.h  macro.h  mem.h  module.h  obj.h  ops.h  rand.h  range.h  read.h  script.h  session.h  signal.h  sleep.h  source.h  str.h  tuple.h  type.h  typeof.h  unit.h  unset.h  util.h  (+1 more)
include/ash/core/: exec.h
include/ash/ffi/: ffi.h
include/ash/lang/: ast.h  lang.h  lex.h  main.h  parser.h  runtime.h
include/ash/term/: term.h
include/ash/type/: array.h  map.h
include/ash/util/: hash.h  map.h  queue.h  rc.h  vec.h
lib/: libash
share/man/: ash.1
tests/: 0.ash  0.sh  1.ash  2.ash  3.ash  4.ash  alias.ash  argv.ash  array.ash  cartisian.ash  closure.ash  each.ash  fact.ash  fib.ash  gcd.ash  guess.ash  line.ash  map.ash  os.ash  pow.ash  range.ash  scope.ash  test
